SQuirreL SQL FX Change Log
==============================

Feature: Schema caching is now implemented. Schema caching is often useful for databases which take a long time to connect to.
   Up to now you could already select this option in the Alias properties dialog but it was treated the same way as "load all, cache non".

Feature: SQL-Editor: Using tools popup (ctrl+T) or right mouse menu to quote/unquote SQL as Java style concatenated string.
         Note: There is also a new setting that allows to automatically copy quoted SQLs to clipboard.

Feature: SQL-Editor: Ctrl+NumblockMinus toggles current SQL or selection between commented and uncommented.

Feature: SQL-Editor: Ctrl+Shift+U toggles selected text between upper and lower case.

Feature: New object tree right mouse menu to copy node names.

Improvement: Duplicate line (ctrl+D) now moves the caret to the duplicated line.

Bug fix: Code completion didn't work right for qualified columns.

Feature: If a table cell is double clicked a cell data display window opens. This window's right mouse menu now offers an entry to reformat Xml or Json strings.

Improvement: Code completion and abbreviations now handle boundary characters like (),=<> better.

Bug fix: Application window size was not saved on application exit.

Bug fix: The "Reconnect database" button switched auto commit mode.

Bug fix: Improved/corrected calculation of table/view closest to the caret once more. Now completion of unqualified columns works better than before.

Feature: Object tree detail tables as well as SQL result meta data tables do now offer the standard right mouse menu.

Bug fix: Fixed encoding bug that made SQuirreL FX crash during start up when for example German umlauts where used for Alias names or elsewhere.

Feature: New menu item to save all settings immediately, see menu File --> "Save all settings"
         Note: Settings are automatically saved on application closing.
