@@ -17,4 +17,6 @@ connectingctrl.alias.display=%s: %s as %s
 
 
 
+open.alias.properties=Open Alias properties
 
+session.loading.time.hint=If loading this session takes long\nconsider changing its Alias properties:
