@@ -4,10 +4,11 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.squirrelsql.services.progress.SimpleProgressView">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="433.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.squirrelsql.services.progress.SimpleProgressView">
    <children>
-      <ProgressIndicator fx:id="progressIndicator" layoutX="14.0" layoutY="340.0" progress="0.0" AnchorPane.bottomAnchor="14.0" />
-      <TextArea fx:id="txtProgressMsg" editable="false" layoutX="14.0" layoutY="14.0" prefHeight="312.0" prefWidth="570.0" AnchorPane.bottomAnchor="73.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="15.0" />
-      <Button fx:id="btnCancelClose" layoutX="92.0" layoutY="340.0" mnemonicParsing="false" text="%simpleProgressView.cancel" AnchorPane.bottomAnchor="35.0" />
+      <ProgressIndicator fx:id="progressIndicator" layoutX="14.0" layoutY="375.0" progress="0.0" AnchorPane.bottomAnchor="12.0" />
+      <TextArea fx:id="txtProgressMsg" editable="false" layoutX="14.0" layoutY="14.0" prefHeight="329.0" prefWidth="570.0" AnchorPane.bottomAnchor="89.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="15.0" />
+      <Button fx:id="btnCancelClose" layoutX="67.0" layoutY="339.0" mnemonicParsing="false" text="%simpleProgressView.cancel" AnchorPane.bottomAnchor="35.0" />
+      <BorderPane fx:id="availableArea" layoutX="317.0" layoutY="339.0" prefHeight="74.0" prefWidth="293.0" AnchorPane.bottomAnchor="9.0" AnchorPane.rightAnchor="16.0" />
    </children>
 </AnchorPane>
